--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             });
             var popupContent = '<table>\
                     <tr>\
-                        <th scope="row">WADMKC</th>\
+                        <th scope="row">Kecamatan</th>\
                         <td class="visible-with-data" id="WADMKC">' + (feature.properties['WADMKC'] !== null ? autolinker.link(String(feature.properties['WADMKC']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
